evil gateauset refactor